[metadata]
name = image-render-gui
version = attr: catharsys.gui.web.version.__version__
python_requires='>=3.10'

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    nicegui==1.4.17
    trustme
    anytree
    
[options.packages.find]
where = src
exclude = dev

[options.package_data]
catharsys.gui.web =
    apps/*.py
    scripts/*.sh

[options.entry_points]
catharsys.commands =
    gui = catharsys.gui.web.cmd.gui_main

catharsys.commands.gui =
    ws = catharsys.gui.web.cmd.gui_workspace

